compiler-core/src/type_/snapshots/gleam_core__type___tests__erlang_only_function_with_erlang_external-2.snap
---
source: compiler-core/src/type_/tests.rs
expression: "@external(erlang, \"foo\", \"bar\")\npub fn erlang_only() -> Int\n\n@external(erlang, \"foo\", \"bar\")\npub fn uh_oh() -> Int {\n  erlang_only()\n}\n"
---
error: Unsupported target
  ┌─ /src/one/two.gleam:6:3
  │
6 │   erlang_only()
  │   ^^^^^^^^^^^

This function doesn't have an implementation for the JavaScript target.

